// Vitest Snapshot v1

exports[`(components) atoms/heading > (blue) take snap shot 1`] = `
<div>
  <h1
    class="css-15j0izh-Heading"
  >
    This is test
  </h1>
</div>
`;

exports[`(components) atoms/heading > (default) take snap shot 1`] = `
<div>
  <h1
    class="css-18llolt-Heading"
  >
    This is test
  </h1>
</div>
`;

exports[`(components) atoms/heading > (green) take snap shot 1`] = `
<div>
  <h1
    class="css-7cw945-Heading"
  >
    This is test
  </h1>
</div>
`;

exports[`(components) atoms/heading > (purple) take snap shot 1`] = `
<div>
  <h1
    class="css-1ty2e9r-Heading"
  >
    This is test
  </h1>
</div>
`;

exports[`(components) atoms/heading > (red) take snap shot 1`] = `
<div>
  <h1
    class="css-1qs7n4g-Heading"
  >
    This is test
  </h1>
</div>
`;

exports[`(components) atoms/heading > (yellow) take snap shot 1`] = `
<div>
  <h1
    class="css-18llolt-Heading"
  >
    This is test
  </h1>
</div>
`;
